--- a/frontend/src/presentation/style/service-sale.css
+++ b/frontend/src/presentation/style/service-sale.css
@@ -28,7 +28,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.service-sale-table-head {
+.service-sales-table-head {
   display: table-header-group;
   vertical-align: middle;
   background-color: #ecf0f1;
