--- a/frontend/src/presentation/style/cash.css
+++ b/frontend/src/presentation/style/cash.css
@@ -14,6 +14,11 @@
   color: #333;
 }
 
+.total-in-cash {
+  font-size: 1.75em;
+  font-weight: bold;
+}
+
 .main-informations {
   display: flex;
   gap: 20px;
